--- a/package.json
+++ b/package.json
@@ -9,33 +9,43 @@
     "dev:web": "vite",
     "build:web": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "format": "prettier --loglevel=warn --write \"**/*.{ts,tsx,vue,scss,md,mdx}\"",
+    "preinstall": "node ./scripts/preinstall.js"
   },
   "dependencies": {
-    "@mdx-js/react": "^2.1.5",
-    "@tauri-apps/api": "^1",
-    "dayjs": "^1.11.6",
-    "pinia": "^2.0.23",
+    "@tauri-apps/api": "^1.2.0",
+    "dayjs": "^1.11.7",
+    "pinia": "^2.0.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "sass": "^1.55.0",
+    "sass": "^1.57.1",
     "utility-types": "^3.10.0",
-    "vue": "^3",
+    "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1",
+    "@tauri-apps/cli": "^1.2.2",
     "@types/lodash-es": "^4.17.6",
-    "@types/node": "^18",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@types/react-is": "^17.0.3",
-    "@vitejs/plugin-vue": "^3",
+    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-vue": "^3.2.0",
     "lodash-es": "^4.17.21",
-    "typescript": "^4",
-    "vite": "^3",
-    "vitest": "^0.24.3",
-    "vue-tsc": "^1"
+    "prettier": "^2.8.2",
+    "typescript": "^4.9.4",
+    "vite": "^3.2.5",
+    "vitest": "^0.24.5",
+    "vue-tsc": "^1.0.24"
+  },
+  "workspaces": [
+    "packages"
+  ],
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=7"
   }
 }
