--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -2,13 +2,11 @@
 name = "rome-tools"
 version = "0.0.0"
 description = "A Tauri App"
-authors = ["you"]
-license = ""
+authors = ["michaelbguo"]
+license = "MIT"
 repository = ""
 edition = "2021"
 rust-version = "1.57"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
 tauri-build = { version = "1.1", features = [] }
@@ -19,9 +17,5 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1", features = ["api-all"] }
 
 [features]
-# by default Tauri runs in production mode
-# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
 default = [ "custom-protocol" ]
-# this feature is used used for production builds where `devPath` points to the filesystem
-# DO NOT remove this
 custom-protocol = [ "tauri/custom-protocol" ]
